; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/lcc/tst/extr_cq.c_regp.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/lcc/tst/extr_cq.c_regp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @regp() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i32*, align 8
  %20 = alloca i32*, align 8
  %21 = alloca i32*, align 8
  %22 = alloca i32*, align 8
  %23 = alloca i32*, align 8
  %24 = alloca i32*, align 8
  %25 = alloca i32*, align 8
  %26 = alloca i32*, align 8
  %27 = alloca i32*, align 8
  %28 = alloca i32*, align 8
  %29 = alloca i32*, align 8
  %30 = alloca i32*, align 8
  %31 = alloca i32*, align 8
  %32 = alloca i32*, align 8
  %33 = alloca i32*, align 8
  %34 = alloca i32*, align 8
  %35 = alloca i32*, align 8
  %36 = alloca i32*, align 8
  %37 = alloca i32*, align 8
  %38 = alloca i32*, align 8
  %39 = alloca i32*, align 8
  %40 = alloca i32*, align 8
  %41 = alloca i32, align 4
  %42 = alloca i32, align 4
  %43 = alloca i32, align 4
  %44 = alloca i32, align 4
  %45 = alloca i32, align 4
  %46 = alloca [22 x i32], align 16
  %47 = bitcast i32** %2 to i32*
  store i32* %47, i32** %2, align 8
  %48 = bitcast i32** %3 to i32*
  store i32* %48, i32** %3, align 8
  %49 = bitcast i32** %4 to i32*
  store i32* %49, i32** %4, align 8
  %50 = bitcast i32** %5 to i32*
  store i32* %50, i32** %5, align 8
  %51 = bitcast i32** %7 to i32*
  store i32* %51, i32** %6, align 8
  %52 = bitcast i32** %7 to i32*
  store i32* %52, i32** %7, align 8
  %53 = bitcast i32** %9 to i32*
  store i32* %53, i32** %8, align 8
  %54 = bitcast i32** %9 to i32*
  store i32* %54, i32** %9, align 8
  %55 = bitcast i32** %11 to i32*
  store i32* %55, i32** %10, align 8
  %56 = bitcast i32** %11 to i32*
  store i32* %56, i32** %11, align 8
  %57 = bitcast i32** %13 to i32*
  store i32* %57, i32** %12, align 8
  %58 = bitcast i32** %13 to i32*
  store i32* %58, i32** %13, align 8
  %59 = bitcast i32** %15 to i32*
  store i32* %59, i32** %14, align 8
  %60 = bitcast i32** %15 to i32*
  store i32* %60, i32** %15, align 8
  %61 = bitcast i32** %17 to i32*
  store i32* %61, i32** %16, align 8
  %62 = bitcast i32** %17 to i32*
  store i32* %62, i32** %17, align 8
  %63 = bitcast i32** %19 to i32*
  store i32* %63, i32** %18, align 8
  %64 = bitcast i32** %19 to i32*
  store i32* %64, i32** %19, align 8
  %65 = bitcast i32** %21 to i32*
  store i32* %65, i32** %20, align 8
  %66 = bitcast i32** %21 to i32*
  store i32* %66, i32** %21, align 8
  %67 = bitcast i32** %23 to i32*
  store i32* %67, i32** %22, align 8
  %68 = bitcast i32** %23 to i32*
  store i32* %68, i32** %23, align 8
  %69 = bitcast i32** %25 to i32*
  store i32* %69, i32** %24, align 8
  %70 = bitcast i32** %25 to i32*
  store i32* %70, i32** %25, align 8
  %71 = bitcast i32** %27 to i32*
  store i32* %71, i32** %26, align 8
  %72 = bitcast i32** %27 to i32*
  store i32* %72, i32** %27, align 8
  %73 = bitcast i32** %29 to i32*
  store i32* %73, i32** %28, align 8
  %74 = bitcast i32** %29 to i32*
  store i32* %74, i32** %29, align 8
  %75 = bitcast i32** %31 to i32*
  store i32* %75, i32** %30, align 8
  %76 = bitcast i32** %31 to i32*
  store i32* %76, i32** %31, align 8
  %77 = bitcast i32** %33 to i32*
  store i32* %77, i32** %32, align 8
  %78 = bitcast i32** %33 to i32*
  store i32* %78, i32** %33, align 8
  %79 = bitcast i32** %35 to i32*
  store i32* %79, i32** %34, align 8
  %80 = bitcast i32** %35 to i32*
  store i32* %80, i32** %35, align 8
  %81 = bitcast i32** %37 to i32*
  store i32* %81, i32** %36, align 8
  %82 = bitcast i32** %37 to i32*
  store i32* %82, i32** %37, align 8
  %83 = bitcast i32** %38 to i32*
  store i32* %83, i32** %38, align 8
  %84 = bitcast i32** %39 to i32*
  store i32* %84, i32** %39, align 8
  %85 = bitcast i32** %40 to i32*
  store i32* %85, i32** %40, align 8
  %86 = ptrtoint i32** %3 to i64
  %87 = ptrtoint i32** %2 to i64
  %88 = sub i64 %86, %87
  %89 = sdiv exact i64 %88, 8
  %90 = trunc i64 %89 to i32
  %91 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 0
  store i32 %90, i32* %91, align 16
  %92 = ptrtoint i32** %4 to i64
  %93 = ptrtoint i32** %3 to i64
  %94 = sub i64 %92, %93
  %95 = sdiv exact i64 %94, 8
  %96 = trunc i64 %95 to i32
  %97 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 1
  store i32 %96, i32* %97, align 4
  %98 = ptrtoint i32** %5 to i64
  %99 = ptrtoint i32** %4 to i64
  %100 = sub i64 %98, %99
  %101 = sdiv exact i64 %100, 8
  %102 = trunc i64 %101 to i32
  %103 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 2
  store i32 %102, i32* %103, align 8
  %104 = ptrtoint i32** %7 to i64
  %105 = ptrtoint i32** %5 to i64
  %106 = sub i64 %104, %105
  %107 = sdiv exact i64 %106, 8
  %108 = trunc i64 %107 to i32
  %109 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 3
  store i32 %108, i32* %109, align 4
  %110 = ptrtoint i32** %9 to i64
  %111 = ptrtoint i32** %7 to i64
  %112 = sub i64 %110, %111
  %113 = sdiv exact i64 %112, 8
  %114 = trunc i64 %113 to i32
  %115 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 4
  store i32 %114, i32* %115, align 16
  %116 = ptrtoint i32** %11 to i64
  %117 = ptrtoint i32** %9 to i64
  %118 = sub i64 %116, %117
  %119 = sdiv exact i64 %118, 8
  %120 = trunc i64 %119 to i32
  %121 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 5
  store i32 %120, i32* %121, align 4
  %122 = ptrtoint i32** %13 to i64
  %123 = ptrtoint i32** %11 to i64
  %124 = sub i64 %122, %123
  %125 = sdiv exact i64 %124, 8
  %126 = trunc i64 %125 to i32
  %127 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 6
  store i32 %126, i32* %127, align 8
  %128 = ptrtoint i32** %15 to i64
  %129 = ptrtoint i32** %13 to i64
  %130 = sub i64 %128, %129
  %131 = sdiv exact i64 %130, 8
  %132 = trunc i64 %131 to i32
  %133 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 7
  store i32 %132, i32* %133, align 4
  %134 = ptrtoint i32** %17 to i64
  %135 = ptrtoint i32** %15 to i64
  %136 = sub i64 %134, %135
  %137 = sdiv exact i64 %136, 8
  %138 = trunc i64 %137 to i32
  %139 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 8
  store i32 %138, i32* %139, align 16
  %140 = ptrtoint i32** %19 to i64
  %141 = ptrtoint i32** %17 to i64
  %142 = sub i64 %140, %141
  %143 = sdiv exact i64 %142, 8
  %144 = trunc i64 %143 to i32
  %145 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 9
  store i32 %144, i32* %145, align 4
  %146 = ptrtoint i32** %21 to i64
  %147 = ptrtoint i32** %19 to i64
  %148 = sub i64 %146, %147
  %149 = sdiv exact i64 %148, 8
  %150 = trunc i64 %149 to i32
  %151 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 10
  store i32 %150, i32* %151, align 8
  %152 = ptrtoint i32** %23 to i64
  %153 = ptrtoint i32** %21 to i64
  %154 = sub i64 %152, %153
  %155 = sdiv exact i64 %154, 8
  %156 = trunc i64 %155 to i32
  %157 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 11
  store i32 %156, i32* %157, align 4
  %158 = ptrtoint i32** %25 to i64
  %159 = ptrtoint i32** %23 to i64
  %160 = sub i64 %158, %159
  %161 = sdiv exact i64 %160, 8
  %162 = trunc i64 %161 to i32
  %163 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 12
  store i32 %162, i32* %163, align 16
  %164 = ptrtoint i32** %27 to i64
  %165 = ptrtoint i32** %25 to i64
  %166 = sub i64 %164, %165
  %167 = sdiv exact i64 %166, 8
  %168 = trunc i64 %167 to i32
  %169 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 13
  store i32 %168, i32* %169, align 4
  %170 = ptrtoint i32** %29 to i64
  %171 = ptrtoint i32** %27 to i64
  %172 = sub i64 %170, %171
  %173 = sdiv exact i64 %172, 8
  %174 = trunc i64 %173 to i32
  %175 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 14
  store i32 %174, i32* %175, align 8
  %176 = ptrtoint i32** %31 to i64
  %177 = ptrtoint i32** %29 to i64
  %178 = sub i64 %176, %177
  %179 = sdiv exact i64 %178, 8
  %180 = trunc i64 %179 to i32
  %181 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 15
  store i32 %180, i32* %181, align 4
  %182 = ptrtoint i32** %33 to i64
  %183 = ptrtoint i32** %31 to i64
  %184 = sub i64 %182, %183
  %185 = sdiv exact i64 %184, 8
  %186 = trunc i64 %185 to i32
  %187 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 16
  store i32 %186, i32* %187, align 16
  %188 = ptrtoint i32** %35 to i64
  %189 = ptrtoint i32** %33 to i64
  %190 = sub i64 %188, %189
  %191 = sdiv exact i64 %190, 8
  %192 = trunc i64 %191 to i32
  %193 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 17
  store i32 %192, i32* %193, align 4
  %194 = ptrtoint i32** %37 to i64
  %195 = ptrtoint i32** %35 to i64
  %196 = sub i64 %194, %195
  %197 = sdiv exact i64 %196, 8
  %198 = trunc i64 %197 to i32
  %199 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 18
  store i32 %198, i32* %199, align 8
  %200 = ptrtoint i32** %38 to i64
  %201 = ptrtoint i32** %37 to i64
  %202 = sub i64 %200, %201
  %203 = sdiv exact i64 %202, 8
  %204 = trunc i64 %203 to i32
  %205 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 19
  store i32 %204, i32* %205, align 4
  %206 = ptrtoint i32** %39 to i64
  %207 = ptrtoint i32** %38 to i64
  %208 = sub i64 %206, %207
  %209 = sdiv exact i64 %208, 8
  %210 = trunc i64 %209 to i32
  %211 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 20
  store i32 %210, i32* %211, align 16
  %212 = ptrtoint i32** %40 to i64
  %213 = ptrtoint i32** %39 to i64
  %214 = sub i64 %212, %213
  %215 = sdiv exact i64 %214, 8
  %216 = trunc i64 %215 to i32
  %217 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 21
  store i32 %216, i32* %217, align 4
  %218 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 0
  %219 = load i32, i32* %218, align 16
  store i32 %219, i32* %42, align 4
  store i32 1, i32* %41, align 4
  store i32 0, i32* %45, align 4
  br label %220

220:                                              ; preds = %267, %0
  %221 = load i32, i32* %45, align 4
  %222 = icmp slt i32 %221, 22
  br i1 %222, label %223, label %270

223:                                              ; preds = %220
  %224 = load i32, i32* %41, align 4
  switch i32 %224, label %266 [
    i32 1, label %225
    i32 2, label %238
    i32 3, label %257
  ]

225:                                              ; preds = %223
  %226 = load i32, i32* %45, align 4
  %227 = sext i32 %226 to i64
  %228 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 %227
  %229 = load i32, i32* %228, align 4
  %230 = load i32, i32* %42, align 4
  %231 = icmp ne i32 %229, %230
  br i1 %231, label %232, label %237

232:                                              ; preds = %225
  %233 = load i32, i32* %45, align 4
  %234 = sext i32 %233 to i64
  %235 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 %234
  %236 = load i32, i32* %235, align 4
  store i32 %236, i32* %43, align 4
  store i32 2, i32* %41, align 4
  store i32 1, i32* %44, align 4
  br label %237

237:                                              ; preds = %232, %225
  br label %266

238:                                              ; preds = %223
  %239 = load i32, i32* %45, align 4
  %240 = sext i32 %239 to i64
  %241 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 %240
  %242 = load i32, i32* %241, align 4
  %243 = load i32, i32* %42, align 4
  %244 = icmp eq i32 %242, %243
  br i1 %244, label %245, label %246

245:                                              ; preds = %238
  store i32 3, i32* %41, align 4
  br label %266

246:                                              ; preds = %238
  %247 = load i32, i32* %45, align 4
  %248 = sext i32 %247 to i64
  %249 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 %248
  %250 = load i32, i32* %249, align 4
  %251 = load i32, i32* %43, align 4
  %252 = icmp eq i32 %250, %251
  br i1 %252, label %253, label %256

253:                                              ; preds = %246
  %254 = load i32, i32* %44, align 4
  %255 = add nsw i32 %254, 1
  store i32 %255, i32* %44, align 4
  br label %266

256:                                              ; preds = %246
  store i32 4, i32* %41, align 4
  br label %266

257:                                              ; preds = %223
  %258 = load i32, i32* %45, align 4
  %259 = sext i32 %258 to i64
  %260 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 %259
  %261 = load i32, i32* %260, align 4
  %262 = load i32, i32* %42, align 4
  %263 = icmp ne i32 %261, %262
  br i1 %263, label %264, label %265

264:                                              ; preds = %257
  store i32 4, i32* %41, align 4
  br label %265

265:                                              ; preds = %264, %257
  br label %266

266:                                              ; preds = %223, %265, %256, %253, %245, %237
  br label %267

267:                                              ; preds = %266
  %268 = load i32, i32* %45, align 4
  %269 = add nsw i32 %268, 1
  store i32 %269, i32* %45, align 4
  br label %220

270:                                              ; preds = %220
  %271 = load i32, i32* %41, align 4
  %272 = icmp eq i32 %271, 3
  br i1 %272, label %273, label %276

273:                                              ; preds = %270
  %274 = load i32, i32* %44, align 4
  %275 = sub nsw i32 16, %274
  store i32 %275, i32* %1, align 4
  br label %277

276:                                              ; preds = %270
  store i32 -1, i32* %1, align 4
  br label %277

277:                                              ; preds = %276, %273
  %278 = load i32, i32* %1, align 4
  ret i32 %278
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
